--- a/src/frontend/styles/components/welcome_screen.styl
+++ b/src/frontend/styles/components/welcome_screen.styl
@@ -1,10 +1,10 @@
 // Welcome screen widget styles
 #welcomeScreen
   position: fixed
-  top: 2.27em
+  top: 2.1em
   left: 0
   right: 0
-  bottom: 0
+  bottom: 2em
   z-index: 10
   display: none
   pointer-events: none
@@ -17,6 +17,10 @@
     .minimize
       background-position: bottom
       background-position-y: 18px
+
+#welcomeScreen .welcome-screen-root
+  height: 100%
+  min-height: 100%
 
 .welcome-screen-loading-overlay
   position: absolute
@@ -59,6 +63,7 @@
   color: WELCOME_SCREEN_TEXT_COLOR;
   background-color: WELCOME_SCREEN_BACKGROUND_COLOR;
   min-height: 100%;
+  height: 100%;
   position: relative;
   width: 100%;
   z-index: 50
